# most-test-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  docker.yaml
FRONTEND/: index.html  package-lock.json  package.json  vite.config.js
FRONTEND/src/: App.vue
FRONTEND/src/api/: tasks.js
FRONTEND/src/components/: TaskArchive.vue  TaskDetail.vue
FRONTEND/src/router/: index.js
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/schemas/: db.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp  problem.hpp
src/admin_component/: load_task.cpp  load_task.hpp  unload_all_solution.cpp  unload_all_solution.hpp
src/api/: get_all_solutions.cpp  get_all_solutions.hpp  get_all_tasks.cpp  get_all_tasks.hpp  get_task_by_id.cpp  get_task_by_id.hpp  get_tasks.cpp  get_tasks.hpp  load_task.cpp  load_task.hpp  register_user.cpp  register_user.hpp  submit_solution.cpp  submit_solution.hpp
src/checker/: AbstractChecker.hpp  PythonChecker.cpp  PythonChecker.hpp  abstract_checker.hpp  python_checker.cpp  python_checker.hpp
src/checker/bash_checker_components/: python.bash
src/checker_components/: problem.hpp  submission_feedback.cpp  submission_feedback.hpp  test_decoder.cpp  test_decoder.hpp
src/checker_test/: python_checker_test.cpp
src/components/: execution_status.hpp  test_decoder.cpp  test_decoder.hpp  user.hpp
src/user_component/: submit_solution.cpp  submit_solution.hpp  test_decoder.cpp  test_decoder.hpp
tests/: conftest.py  test_basic.py
